update detalhes